[gd_scene load_steps=7 format=3 uid="uid://bh7c4qfu43tmt"]

[ext_resource type="Script" uid="uid://du0kvklebtvxk" path="res://scenes/player/player.gd" id="1_7uitc"]
[ext_resource type="PackedScene" uid="uid://2gegeweix5ad" path="res://scenes/player/player_model_chassis.tscn" id="2_35jd4"]
[ext_resource type="PackedScene" uid="uid://cfr8iinpn8x1x" path="res://scenes/player/player_model_turret.tscn" id="3_2le5l"]
[ext_resource type="AudioStream" uid="uid://djcvvfipgdaak" path="res://assets/wav/player/player_bullet.wav" id="4_56xhb"]

[sub_resource type="BoxShape3D" id="BoxShape3D_o3ydk"]
size = Vector3(2.12142, 1.11035, 2.10487)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hkjox"]
playback_mode = 1
random_pitch = 1.2
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("4_56xhb")

[node name="Player" type="CharacterBody3D" groups=["player"]]
axis_lock_linear_y = true
script = ExtResource("1_7uitc")

[node name="Base" type="Node3D" parent="."]

[node name="player_model_chassis" parent="Base" instance=ExtResource("2_35jd4")]

[node name="Turret" type="Node3D" parent="."]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0, 0, 0)

[node name="player_model_turret" parent="Turret" instance=ExtResource("3_2le5l")]
transform = Transform3D(1, 0, -1.42109e-14, 0, 1, 0, 1.42109e-14, 0, 1, 0, 0, 0)

[node name="projectile_spawn" type="Node3D" parent="Turret"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -4.59029e-07, 0.6283, 1.85514)

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000461578, 0.555176, -0.0038681)
shape = SubResource("BoxShape3D_o3ydk")

[node name="ProjectileTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="BulletFx" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_hkjox")
bus = &"FX"

[connection signal="timeout" from="ProjectileTimer" to="." method="_on_projectile_timer_timeout"]
